--- a/isearchd/requirements.txt
+++ b/isearchd/requirements.txt
@@ -10,6 +10,7 @@ MarkupSafe==3.0.2
 mpmath==1.3.0
 multilingual-clip==1.0.10
 networkx==3.4.2
+nose==1.3.7
 numpy==2.1.2
 open_clip_torch==2.28.0
 packaging==24.1
@@ -29,4 +30,5 @@ tqdm==4.66.5
 transformers==4.46.0
 typing_extensions==4.12.2
 urllib3==2.2.3
+watchdog==5.0.3
 wcwidth==0.2.13
